store-index-update

--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
             
             <div class="foot">
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT US</a></li>
-                    <li><a href="">CONTACT US</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contactform.html">CONTACT US</a></li>
         
                 </ul>
-
+<center><p style="color:white"> All Copyrights &copy; reserved by Yadvi 2022❤️ </p></center>
                 <ul class = "icons">
                   <li>
                       <i class = "fa fa-twitter"></i>
